Publish libertarianism post, finally.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -10,14 +10,16 @@ tags: ['libertarianism']
 
 <p>Каждый раздел имеет описание функционирования области, плюсы такого функционирования и ответы на часто возникаемые контраргументы к модели жизни.</p>
 
+<p>Содержание:</p>
+
 <ul>
-<li><strong>Определение</strong></li>
-<li><strong>О эффективности конкуренции</strong></li>
-<li><strong>Частное правосудие (полиция и суды)</strong></li>
-<li><strong>Частные дороги, земля и моря</strong></li>
-<li><strong>Частные деньги</strong></li>
-<li><strong>Жизнь в общем</strong></li>
-<li><strong>Заключение</strong></li>
+<li>Определение</li>
+<li>О эффективности конкуренции</li>
+<li>Частное правосудие (полиция и суды)</li>
+<li>Частные дороги, земля и моря</li>
+<li>Частные деньги</li>
+<li>Жизнь в общем</li>
+<li>Заключение</li>
 </ul>
 
 <h2>Определение</h2>
@@ -46,6 +48,7 @@ tags: ['libertarianism']
 <li><strong>Тюрем не будет</strong> (в современном виде), из-за их неэффективности. Тюрьмы сегодня просто содержат массу заключенных за счет налогоплательщиков. В свободном обществе, частные компании будут принуждать агрессоров отплачивать причиненный ими ущерб частной собственности или личности других. Так как частная компания не заинтересована в содержании на своей шее агрессоров, провинившиеся сами будут зарабатывать себе на жизнь, при этом живя в несвободе, пока не отплатят нужную сумму.</li>
 <li>Из-за свободной природы частников, разные люди смогут выбирать <strong>разные кодексы законов</strong>. Например, исламисты смогут использовать Шариат. Конечно, только если Шариат будет использоваться и его оппонентом. В противном случае, более общий кодекс законов будет применен, как сегодня, с интернациональными преступлениями.</li>
 <li>Не будет законов, запрещающих <strong>свободный оборот оружия</strong>. Крыши не заинтересованы в разоружении своих клиентов, поскольку в этом случае у клиентов будет больше шансов подвергнуться агрессии, за что крыша должна будет заплатить.</li>
+<li>К слову о <strong>национальной безопасности</strong>, в анкапе нет принудительной армии. Вместо этого, большие охранные агенства предоставляют услуги защиты от государств и других агрессоров. Возможно, даже с ядерным оружием. Защита такой страховки будет выше у границ с государствами и ниже вдали от них. Защита не должна быть сложной, так как частники заинтересованы в минимальных потерях на войне и, если оная начинается, крыши моментально высылают отряды, нацеленные лично на индивидуалов, ответственных за войну (из правительства) вместо того, чтобы воевать с большой армией государств. Это не похоже на то, что сегодня делают государства — те заинтересованы в полноценной реальной войне.</li>
 </ul>
 
 <h3>Плюсы</h3>
