Update libertarianism definition.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -24,7 +24,18 @@ tags: ['libertarianism']
 
 <h2>Определение</h2>
 
-<p><strong>Либертарианство</strong> — политическая философия, в основе которой лежит запрет на “агрессивное насилие”. В целом, идея в том, что а) аморально б) неэффективно использовать принуждение вместо добровольных отношений. По данной логике, современные правительства — агрессоры, ничем не отличающиеся от воров и грабителей и должны быть упразднены или, по крайней мере, сильно уменьшены в размерах.</p>
+<p><strong>Либертарианство</strong> — множество связанных политических философий, которые поддерживают свободу, как высшую политическую цель.</p>
+
+<p>Либертарианство имеет моральное и утилитарное обоснование себя. В качестве введения, существуют четыре основных опоры либертарианской этики:</p>
+
+<ol>
+<li><strong>Владение собой</strong> — вы владеете собой и, до момента, покуда вы — мирный неагрессор, никто не может законно инициировать агрессию против вашего тела.</li>
+<li><strong>Частная собственность</strong> — вы можете мирно и абсолютно удерживать собственность, которую получили из ранее неиспользуемых ресурсов, или которую вы получили как подарок или в контракте.</li>
+<li><strong>Теория контрактов</strong> — вы можете, с помощью явных контрактов (добровольного согласия обоих сторон), организовывать обмен собственности на услуги или другую собственность.</li>
+<li><strong>Принцип не-агрессии</strong> — вы не можете инициировать агрессию против других людей или их собственности.</li>
+</ol>
+
+<p>Выходя из этого, современные государства нарушают теорию контрактов и принцип не-агрессии, поэтому должны быть устранены, а их функции — заменены более эффективными аналогами на свободном рынке.</p>
 
 <p>Это прагматичная философия, ради которой не нужно изменение природы человека и которая говорит, что всегда будут плохие люди, и что в общем случае при наличии свободы человек ведет себя лучше, чем в ее отсутствие.</p>
 
