Add project can’t parse emails.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: base
 
   <li class="project new-project-type"><a href="http://git.io/top">GitHub top users</a> — frequently updated stats of top users on GitHub.</li>
   <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
+  <li class="project"><a href="https://github.com/rwz/cant-parse-emails">Can’t parse emails</a> — a list of webservices that have no idea how an email address should look like.</li>
   <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
   <li class="project"><a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a> &amp; <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a> bundles for Sublime Text / TM2.</li>
   <li class="project"><a href="https://github.com/paulmillr?tab=repositories">Everything else</a></li>
