--- a/hire.html
+++ b/hire.html
@@ -14,7 +14,7 @@ layout: base
     <ul>
       <li>Minimum viable product</li>
       <li>Complete solution</li>
-      <li>Brief consulting on architecture and technologies</li>
+      <li>Brief consulting on app architecture and technologies</li>
     </ul>
 
     <h3>I’d love to help you</h3>
