--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ layout: base
   <ul class="projects">
   <li class="project"><a href="http://brunch.io/">Brunch</a> — HTML5 application assembler.</li>
   <li class="project"><a href="http://chaplinjs.org/">Chaplin</a> — HTML5 application architecture using Backbone.js.</li>
-  <li class="project"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
+  <li class="project"><a href="http://exosjs.com/">Exoskeleton</a> — faster and leaner Backbone for your HTML5 apps.</li>
+
+  <li class="project new-project-type"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
   <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox terminal</a> — decent console with first-class support for CoffeeScript and LiveScript.</li>
 
   <li class="project new-project-type"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
