--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@ layout: base
   <li class="project new-project-type"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
   <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox terminal</a> — decent console with first-class support for CoffeeScript and LiveScript.</li>
 
-  <li class="project new-project-type"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
+  <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
   <li class="project"><a href="https://github.com/paulmillr/es6-shim/">es6-shim</a> — ECMAScript 6 shims for old browsers.</li>
 
-  <li class="project new-project-type"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM data miner and analyzer.</li>
   <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — no-bullshit file watcher for node.js.</li>
   <li class="project"><a href="https://github.com/paulmillr/scaffolt">Scaffolt</a> — dead-simple JSON-based scaffolder.</li>
 
